feat(markup): Add the html markup for the header section

--- a/public/index.html
+++ b/public/index.html
@@ -123,10 +123,71 @@
     <!-- Grid layout overlay -->
     <div class="overlay"></div>
 
-    <main>
-      <!-- Navigation -->
-      <h1>WILLIE</h1>
-      <!-- Hero section -->
+    <header class="c-header">
+      <div class="c-header_container uc-section-container">
+        <h1 class="author-wrapper">
+          <span class="author-wrapper_name uc-fs13-fw800">willie</span>
+          <span class="author-wrapper_title uc-fs13-fw400"
+            >Art Direction + Visual Design</span
+          >
+        </h1>
+
+        <div class="enquires-wrapper">
+          <h2 class="enquires-wrapper_heading uc-fs13-fw400">Enquiries</h2>
+
+          <nav class="enquires-nav">
+            <ul class="nav-list">
+              <li class="nav-list_item">
+                <a
+                  href="mailto:heywilliams@gmail.com"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  class="nav-item_link uc-fs13-fw400"
+                  >heywilliams (at) gmail.com</a
+                >
+              </li>
+              <li class="nav-list_item">
+                <a
+                  href="https://www.instagram.com/willie_ui/"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  class="nav-item_link uc-fs13-fw400"
+                  >instagram</a
+                >
+              </li>
+              <li class="nav-list_item">
+                <a
+                  href="https://twitter.com/willie_ui"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  class="nav-item_link uc-fs13-fw400"
+                  >x</a
+                >
+              </li>
+            </ul>
+          </nav>
+
+          <div class="gmt-time">
+            <p class="time-timezone uc-fs13-fw400">gmt</p>
+            <p class="time uc-fs13-fw400">
+              <span id="hour" class="uc-fs13-fw400">00</span
+              ><span class="ticker" class="uc-fs13-fw400">:</span
+              ><span id="minute" class="uc-fs13-fw400">59</span>, +0hrs
+            </p>
+          </div>
+        </div>
+
+        <button
+          class="info-button uc-fs13-fw400"
+          aria-label="Open info section"
+        >
+          Info
+        </button>
+      </div>
+    </header>
+
+    <main class="c-main">
+      <div class="c-main_container uc-section-container"></div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
