feat(markup): Add the markup for the contact buttons/links section and the main section

--- a/public/index.html
+++ b/public/index.html
@@ -179,15 +179,250 @@
 
         <button
           class="info-button uc-fs13-fw400"
-          aria-label="Open info section"
+          aria-label="Open Info section"
         >
           Info
         </button>
       </div>
     </header>
 
+    <div class="c-contact">
+      <div class="c-contact_container uc-section-container">
+        <button class="menu uc-fs13-fw400" aria-label="Open Info Section">
+          Info
+        </button>
+        <a
+          href="mailto:heywilliams@gmail.com"
+          rel="noopener noreferrer"
+          target="_blank"
+          class="send-message uc-fs13-fw400"
+          >Send message</a
+        >
+      </div>
+    </div>
+
     <main class="c-main">
-      <div class="c-main_container uc-section-container"></div>
+      <div class="c-main_container uc-section-container">
+        <div class="main-heading_wrapper">
+          <h2 class="main-heading">
+            <span class="main-heading_selected uc-ffnhu-fs48-fw800"
+              >Selected</span
+            >
+            <span class="main-heading_works uc-ffroslindale-fs48-fw400"
+              >Works</span
+            >
+          </h2>
+        </div>
+
+        <div class="projects">
+          <div class="projects-item">
+            <img
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725311134/willie-design/balky_ms0wyc.webp"
+              alt="a laptop mockup showing the Balky Studio Website"
+              class="projects-item_image"
+            />
+
+            <div class="projects-item_description">
+              <div class="sticky-wrapper">
+                <p class="description-number uc-fs16-fw500">1.</p>
+
+                <div class="description-title">
+                  <h3 class="project-title uc-fs16-fw500">Balky Studio</h3>
+                  <p class="project-attribution uc-fs16-fw500">
+                    w/Balky Studio
+                  </p>
+                  <a href="#" class="project-link uc-fs16-fw500" disabled
+                    >Visit website</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="projects-item slider">
+            <div class="slider-row">
+              <div class="left-image_wrapper">
+                <div class="controls">
+                  <button class="prev-button" id="prev-button">
+                    <img
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      alt="Left Arrow Icon"
+                    />
+                  </button>
+                  <button class="next-button" id="next-button">
+                    <img
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      alt="Right Arrow Icon"
+                    />
+                  </button>
+                </div>
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310746/willie-design/TSM_1_otof4y.webp"
+                  alt="Collage image showcasing the TopSphere Media website project"
+                  class="left-image"
+                />
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310742/willie-design/TSM_2_oenh8j.webp"
+                  alt="Image showcasing the footer section of the TopSphere Media website project"
+                  class="left-image"
+                />
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310751/willie-design/TSM_3_mlnvxh.webp"
+                  alt="Collage image showcasing the TopSphere Media website project"
+                  class="left-image"
+                />
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310747/willie-design/TSM_5_cvin31.webp"
+                  alt="Image showcasing the hero section of the TopSphere Media website project"
+                  class="left-image"
+                />
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310960/willie-design/TSM_4_u4lqrm.webp"
+                  alt="Image showcasing the hero section of the TopSphere Media website project"
+                  class="left-image"
+                />
+              </div>
+              <div class="right-image_wrapper">
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310748/willie-design/tsm_photography_ken6xc.webp"
+                  alt="Picture of a videographer carrying an adnvanced camera during a video shoot"
+                  class="right_image"
+                />
+              </div>
+            </div>
+
+            <div class="projects-item_description">
+              <div class="sticky-wrapper">
+                <p class="description-number uc-fs16-fw500">2.</p>
+
+                <div class="description-title">
+                  <h3 class="project-title uc-fs16-fw500">TopSphere Media</h3>
+                  <p class="project-attribution uc-fs16-fw500">
+                    w/Balky Studio
+                  </p>
+                  <a href="#" class="project-link uc-fs16-fw500"
+                    >Visit website</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="projects-item">
+            <img
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310759/willie-design/vana_rmnkk0.webp"
+              alt="image showcasing the Vana X-Team Project"
+              class="projects-item_image"
+            />
+
+            <div class="projects-item_description">
+              <div class="sticky-wrapper">
+                <p class="description-number uc-fs16-fw500">3.</p>
+
+                <div class="description-title">
+                  <h3 class="project-title uc-fs16-fw500">Vana X-Team</h3>
+                  <p class="project-attribution uc-fs16-fw500">
+                    w/Balky Studio
+                  </p>
+                  <a href="#" class="project-link uc-fs16-fw500"
+                    >Visit website</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="projects-item slider">
+            <div class="slider-row">
+              <div class="left-image_wrapper">
+                <div class="controls">
+                  <button class="prev-button" id="prev-button">
+                    <img
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      alt="Left Arrow Icon"
+                    />
+                  </button>
+                  <button class="next-button" id="next-button">
+                    <img
+                      src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
+                      alt="Right Arrow Icon"
+                    />
+                  </button>
+                </div>
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310752/willie-design/CBG_4_alpdmr.webp"
+                  alt="A picture showcasing the Chosen By God website project by Willie"
+                  class="left-image"
+                />
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310748/willie-design/CBG_3_jbkqnc.webp"
+                  alt="A picture showcasing the Chosen By God website project by Willie"
+                  class="left-image"
+                />
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310748/willie-design/CBG_2_zzyf8l.webp"
+                  alt="A picture showcasing the Chosen By God website project by Willie"
+                  class="left-image"
+                />
+
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
+                  alt="A picture showcasing the Chosen By God website project by Willie"
+                  class="left-image"
+                />
+              </div>
+              <div class="right-image_wrapper">
+                <img
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310753/willie-design/CBG_1_pzergd.webp"
+                  alt="A picture showcasing the Chosen By God website project by Willie"
+                  class="right_image"
+                />
+              </div>
+            </div>
+
+            <div class="projects-item_description">
+              <div class="sticky-wrapper">
+                <p class="description-number uc-fs16-fw500">4.</p>
+
+                <div class="description-title">
+                  <h3 class="project-title uc-fs16-fw500">Chosen By God</h3>
+                  <p class="project-attribution uc-fs16-fw500">w/Willie</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="projects-item">
+            <img
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725310753/willie-design/VitoQR_ngewyl.webp"
+              alt="phone mockup showcasing the VitoQR Waiter App project"
+              class="projects-item_image"
+            />
+
+            <div class="projects-item_description">
+              <div class="sticky-wrapper">
+                <p class="description-number uc-fs16-fw500">5.</p>
+
+                <div class="description-title">
+                  <h3 class="project-title uc-fs16-fw500">VitoQR Waiter App</h3>
+                  <p class="project-attribution uc-fs16-fw500">w/Vitaliy</p>
+                  <a href="#" class="project-link uc-fs16-fw500"
+                    >Visit website</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
