feat: Add the markup for the footer section and fix accessibility issues on buttons..

--- a/public/index.html
+++ b/public/index.html
@@ -243,13 +243,21 @@
             <div class="slider-row">
               <div class="left-image_wrapper">
                 <div class="controls">
-                  <button class="prev-button" id="prev-button">
+                  <button
+                    class="prev-button"
+                    id="prev-button"
+                    aria-label="Previous slider"
+                  >
                     <img
                       src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
-                  <button class="next-button" id="next-button">
+                  <button
+                    class="next-button"
+                    id="next-button"
+                    aria-label="Next slider"
+                  >
                     <img
                       src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
@@ -341,13 +349,21 @@
             <div class="slider-row">
               <div class="left-image_wrapper">
                 <div class="controls">
-                  <button class="prev-button" id="prev-button">
+                  <button
+                    class="prev-button"
+                    id="prev-button"
+                    aria-label="Previous slider"
+                  >
                     <img
                       src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Left Arrow Icon"
                     />
                   </button>
-                  <button class="next-button" id="next-button">
+                  <button
+                    class="next-button"
+                    id="next-button"
+                    aria-label="Next slider"
+                  >
                     <img
                       src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725397977/willie-design/arrow_hwkbyh.svg"
                       alt="Right Arrow Icon"
@@ -424,6 +440,87 @@
         </div>
       </div>
     </main>
+
+    <footer class="c-footer">
+      <div class="c-footer_container uc-section-container">
+        <div class="top-wrapper">
+          <p class="footer-wrapper uc-fs13-fw500">P-300824</p>
+
+          <div class="enquires-wrapper">
+            <h2 class="enquires-wrapper_heading uc-fs13-fw500">Enquiries</h2>
+
+            <nav class="enquires-nav">
+              <ul class="nav-list">
+                <li class="nav-list_item">
+                  <a
+                    href="mailto:heywilliams@gmail.com"
+                    rel="noopener noreferrer"
+                    target="_blank"
+                    class="nav-item_link uc-fs13-fw500"
+                    >heywilliams (at) gmail.com</a
+                  >
+                </li>
+                <li class="nav-list_item">
+                  <a
+                    href="https://www.instagram.com/willie_ui/"
+                    rel="noopener noreferrer"
+                    target="_blank"
+                    class="nav-item_link uc-fs13-fw500"
+                    >instagram</a
+                  >
+                </li>
+                <li class="nav-list_item">
+                  <a
+                    href="https://twitter.com/willie_ui"
+                    rel="noopener noreferrer"
+                    target="_blank"
+                    class="nav-item_link uc-fs13-fw500"
+                    >x</a
+                  >
+                </li>
+              </ul>
+            </nav>
+
+            <div class="gmt-time">
+              <p class="time-timezone uc-fs13-fw500">gmt</p>
+              <p class="time uc-fs13-fw500">
+                <span id="hour" class="uc-fs13-fw500">00</span
+                ><span class="ticker" class="uc-fs13-fw500">:</span
+                ><span id="minute" class="uc-fs13-fw500">59</span>, +0hrs
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="middle-wrapper">
+          <h3 class="wrapper-heading uc-fs13-fw500">Drop a line</h3>
+          <a
+            class="wrapper-link uc-ffroslindale-fs48-fw400"
+            href="mailto:heywilliams@gmail.com"
+            rel="noopener noreferrer"
+            target="_blank"
+            >Let's talk</a
+          >
+        </div>
+
+        <div class="bottom-wrapper">
+          <p class="footer-author uc-fs13-fw500">
+            Built by
+            <a
+              href="https://www.linkedin.com/in/uzochukwuokafor/"
+              rel="noopener noreferrer"
+              target="_blank"
+              class="uc-fs13-fw500"
+              >Uzo</a
+            >
+          </p>
+
+          <p class="footer-copyright uc-fs13-fw500">
+            &copy; <span class="year uc-fs13-fw500">2024</span>
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
