feat: Add the mouse hover controls for the image slider

--- a/public/index.html
+++ b/public/index.html
@@ -174,8 +174,8 @@
       </div>
     </div>
 
-    <main class="c-main">
-      <div class="c-main_container uc-section-container">
+    <main class="c-main" data-main>
+      <div class="c-main_container uc-section-container" data-main-container>
         <div class="main-heading_wrapper">
           <h2 class="main-heading">
             <span class="main-heading_selected uc-ffnhu-fs48-fw800"
@@ -195,7 +195,7 @@
               class="projects-item_image"
             />
 
-            <div class="projects-item_description">
+            <div class="projects-item_description" data-first-description>
               <div class="sticky-wrapper">
                 <p class="description-number uc-fs16-fw500">1.</p>
 
@@ -212,7 +212,7 @@
             </div>
           </div>
 
-          <div class="projects-item slider">
+          <div class="projects-item slider" data-project-slider>
             <div class="slider-row">
               <div class="left-image_wrapper">
                 <div class="controls">
@@ -236,6 +236,16 @@
                       alt="Right Arrow Icon"
                     />
                   </button>
+                </div>
+
+                <div class="mouse-controls">
+                  <button class="prev-control"></button>
+                  <button class="next-control"></button>
+                  <img
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    alt="Left Arrow Icon"
+                    class="mouse-controls_arrow"
+                  />
                 </div>
 
                 <img
@@ -318,7 +328,7 @@
             </div>
           </div>
 
-          <div class="projects-item slider">
+          <div class="projects-item slider" data-project-slider>
             <div class="slider-row">
               <div class="left-image_wrapper">
                 <div class="controls">
@@ -342,6 +352,16 @@
                       alt="Right Arrow Icon"
                     />
                   </button>
+                </div>
+
+                <div class="mouse-controls">
+                  <button class="prev-control"></button>
+                  <button class="next-control"></button>
+                  <img
+                    src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725397977/willie-design/arrow_hwkbyh.svg"
+                    alt="Left Arrow Icon"
+                    class="mouse-controls_arrow"
+                  />
                 </div>
 
                 <img
