feat: Add data attributes to elements to be animated

--- a/public/index.html
+++ b/public/index.html
@@ -126,8 +126,10 @@
     <header class="c-header">
       <div class="c-header_container uc-section-container">
         <h1 class="author-wrapper" data-faded-out="true">
-          <span class="author-wrapper_name uc-fs13-fw800">willie</span>
-          <span class="author-wrapper_title uc-fs13-fw400"
+          <span class="author-wrapper_name uc-fs13-fw800" data-load-reveal
+            >willie</span
+          >
+          <span class="author-wrapper_title uc-fs13-fw400" data-load-reveal
             >Art Direction + Visual Design</span
           >
         </h1>
@@ -138,6 +140,7 @@
           rel="noopener noreferrer"
           target="_blank"
           data-faded-out="true"
+          data-load-reveal
           >williedsgnr@gmail.com</a
         >
 
@@ -148,6 +151,7 @@
           aria-controls="modal"
           aria-expanded="false"
           data-modal-button="open"
+          data-load-reveal
         >
           Info
         </button>
@@ -155,7 +159,7 @@
     </header>
 
     <div class="c-contact">
-      <div class="c-contact_container uc-section-container">
+      <div class="c-contact_container uc-section-container" data-fade-in>
         <button
           class="menu uc-fs13-fw400"
           aria-label="Open Info Section"
@@ -178,21 +182,26 @@
       <div class="c-main_container uc-section-container" data-main-container>
         <div class="main-heading_wrapper">
           <h2 class="main-heading">
-            <span class="main-heading_selected uc-ffnhu-fs48-fw800"
+            <span
+              class="main-heading_selected uc-ffnhu-fs48-fw800"
+              data-heading-reveal
               >Selected</span
             >
-            <span class="main-heading_works uc-ffroslindale-fs48-fw400"
+            <span
+              class="main-heading_works uc-ffroslindale-fs48-fw400"
+              data-heading-reveal
               >Works</span
             >
           </h2>
         </div>
 
         <div class="projects">
-          <div class="projects-item">
+          <div class="projects-item" data-slide-in>
             <img
               src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/q_10/v1725311134/willie-design/balky_ms0wyc.webp"
               alt="a laptop mockup showing the Balky Studio Website"
               class="projects-item_image"
+              data-scale-in
             />
 
             <div class="projects-item_description" data-first-description>
@@ -443,7 +452,11 @@
       >
         <div class="modal-content uc-section-container">
           <div class="modal-header">
-            <h2 class="modal-heading uc-fs13-fw500" id="modal-title">
+            <h2
+              class="modal-heading uc-fs13-fw500"
+              id="modal-title"
+              data-modal-reveal
+            >
               Williams Alamu
               <span class="modal-heading-innertext uc-ffroslindale-fs48-fw400"
                 >is a creative designer from Lagos with keen interest in design.
@@ -453,7 +466,12 @@
             </h2>
 
             <div class="enquires-wrapper">
-              <h2 class="enquires-wrapper_heading uc-fs13-fw400">Enquiries</h2>
+              <h2
+                class="enquires-wrapper_heading uc-fs13-fw400"
+                data-modal-reveal
+              >
+                Enquiries
+              </h2>
 
               <nav class="enquires-nav">
                 <ul class="nav-list">
@@ -463,6 +481,7 @@
                       rel="noopener noreferrer"
                       target="_blank"
                       class="nav-item_link uc-fs13-fw400"
+                      data-modal-reveal
                       >williedsgnr (at) gmail.com</a
                     >
                   </li>
@@ -472,6 +491,7 @@
                       rel="noopener noreferrer"
                       target="_blank"
                       class="nav-item_link uc-fs13-fw400"
+                      data-modal-reveal
                       >instagram</a
                     >
                   </li>
@@ -481,13 +501,14 @@
                       rel="noopener noreferrer"
                       target="_blank"
                       class="nav-item_link uc-fs13-fw400"
+                      data-modal-reveal
                       >x</a
                     >
                   </li>
                 </ul>
               </nav>
 
-              <div class="gmt-time">
+              <div class="gmt-time" data-modal-reveal>
                 <p class="time-timezone uc-fs13-fw400">gmt</p>
                 <p class="time uc-fs13-fw400">
                   <span id="hour" class="uc-fs13-fw400">00</span
@@ -527,54 +548,114 @@
             <div class="left-content">
               <div class="services">
                 <ul class="services-list">
-                  <li class="services-list_item uc-fs13-fw500">
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
                     Website Design
                   </li>
-                  <li class="services-list_item uc-fs13-fw500">
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
                     UI & UX Design
                   </li>
-                  <li class="services-list_item uc-fs13-fw500">
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
                     eCommerce Design
                   </li>
-                  <li class="services-list_item uc-fs13-fw500">
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
                     Editorial Design
                   </li>
-                  <li class="services-list_item uc-fs13-fw500">
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
                     Digital Product Design
                   </li>
                 </ul>
 
-                <h3 class="services-heading send-message uc-fs13-fw400">
+                <h3
+                  class="services-heading send-message uc-fs13-fw400"
+                  data-modal-fade
+                >
                   Services
                 </h3>
               </div>
 
               <div class="services">
                 <ul class="services-list">
-                  <li class="services-list_item uc-fs13-fw500">Awwwards</li>
-                  <li class="services-list_item uc-fs13-fw500">
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
+                    Awwwards
+                  </li>
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
                     CSS Design Awards
                   </li>
-                  <li class="services-list_item uc-fs13-fw500">Muzli</li>
-                  <li class="services-list_item uc-fs13-fw500">Webflow</li>
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
+                    Muzli
+                  </li>
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
+                    Webflow
+                  </li>
                 </ul>
 
-                <h3 class="services-heading send-message uc-fs13-fw400">
+                <h3
+                  class="services-heading send-message uc-fs13-fw400"
+                  data-modal-fade
+                >
                   Accolades
                 </h3>
               </div>
 
               <div class="services">
                 <ul class="services-list">
-                  <li class="services-list_item uc-fs13-fw500">Vana</li>
-                  <li class="services-list_item uc-fs13-fw500">Paystack</li>
-                  <li class="services-list_item uc-fs13-fw500">Bondir</li>
-                  <li class="services-list_item uc-fs13-fw500">
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
+                    Vana
+                  </li>
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
+                    Paystack
+                  </li>
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
+                    Bondir
+                  </li>
+                  <li
+                    class="services-list_item uc-fs13-fw500"
+                    data-modal-reveal
+                  >
                     Closet Creations
                   </li>
                 </ul>
 
-                <h3 class="services-heading send-message uc-fs13-fw400">
+                <h3
+                  class="services-heading send-message uc-fs13-fw400"
+                  data-modal-fade
+                >
                   Select clients
                 </h3>
               </div>
@@ -584,11 +665,12 @@
                 rel="noopener noreferrer"
                 target="_blank"
                 class="info-send_message send-message uc-fs13-fw400"
+                data-modal-fade
                 >Send message</a
               >
             </div>
             <div class="right-content">
-              <p class="send-message uc-fs13-fw400">
+              <p class="send-message uc-fs13-fw400" data-modal-fade>
                 Currently unavailable for work
               </p>
             </div>
