chore: Swap image slider placeholder images

--- a/public/index.html
+++ b/public/index.html
@@ -392,14 +392,15 @@
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
-                  alt="A picture showcasing the Chosen By God website project by Willie"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725310753/willie-design/CBG_1_pzergd.webp"
+                  alt="A picture showcasing the Chosen By God website project by
+                Willie"
                   class="left-image"
                 />
               </div>
               <div class="right-image_wrapper">
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725310753/willie-design/CBG_1_pzergd.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725310975/willie-design/CBG_Photography_k6d6nc.webp"
                   alt="A picture showcasing the Chosen By God website project by Willie"
                   class="right_image"
                 />
