feat: Replace the modal video with an image and add more elements to the loadAnimation

--- a/public/index.html
+++ b/public/index.html
@@ -202,18 +202,27 @@
               alt="a laptop mockup showing the Balky Studio Website"
               class="projects-item_image"
               data-scale-in
+              fetch-priority="high"
             />
 
             <div class="projects-item_description" data-first-description>
               <div class="sticky-wrapper">
-                <p class="description-number uc-fs16-fw500">1.</p>
+                <p class="description-number uc-fs16-fw500" data-load-reveal>
+                  1.
+                </p>
 
                 <div class="description-title">
-                  <h3 class="project-title uc-fs16-fw500">Balky Studio</h3>
-                  <p class="project-attribution uc-fs16-fw500">
+                  <h3 class="project-title uc-fs16-fw500" data-load-reveal>
+                    Balky Studio
+                  </h3>
+                  <p class="project-attribution uc-fs16-fw500" data-load-reveal>
                     w/Balky Studio
                   </p>
-                  <a href="#" class="project-link uc-fs16-fw500" disabled
+                  <a
+                    href="#"
+                    class="project-link uc-fs16-fw500"
+                    disabled
+                    data-load-reveal
                     >Visit website</a
                   >
                 </div>
@@ -282,7 +291,7 @@
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725310960/willie-design/TSM_4_u4lqrm.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725875886/willie-design/TSM_4.1_a0edcm.webp"
                   alt="Image showcasing the hero section of the TopSphere Media website project"
                   class="left-image"
                 />
@@ -392,7 +401,7 @@
                 />
 
                 <img
-                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725310753/willie-design/CBG_1_pzergd.webp"
+                  src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_10/v1725875118/willie-design/CBG_1.1_sfsdcp.webp"
                   alt="A picture showcasing the Chosen By God website project by
                 Willie"
                   class="left-image"
@@ -493,7 +502,7 @@
                       target="_blank"
                       class="nav-item_link uc-fs13-fw400"
                       data-modal-reveal
-                      >instagram</a
+                      >instagram,</a
                     >
                   </li>
                   <li class="nav-list_item">
@@ -503,7 +512,7 @@
                       target="_blank"
                       class="nav-item_link uc-fs13-fw400"
                       data-modal-reveal
-                      >x</a
+                      >twitter(x)</a
                     >
                   </li>
                 </ul>
@@ -521,28 +530,10 @@
           </div>
 
           <div class="modal-body">
-            <video
-              preload="metadata"
-              muted
-              autoplay
-              loop
-              playsinline
-              loading="lazy"
-            >
-              <source
-                src="https://res.cloudinary.com/dp20bvzhn/image/upload/q_49/v1725444225/willie-design/0001-0320copy1-ezgif.com-video-to-webp-converter_ahxmcj.webp"
-                type="video/webp"
-              />
-              <source
-                src="https://res.cloudinary.com/dp20bvzhn/video/upload/q_54/v1725444396/willie-design/0001-0320copy1-ezgif.com-gif-maker_kkah0s.webm"
-                type="video/webm"
-              />
-              <source
-                src="https://res.cloudinary.com/dp20bvzhn/video/upload/q_58/v1725444549/willie-design/0001-0320_copy_1_1_w5re4z.mp4"
-                type="video/mp4"
-              />
-              Your browser does not support the video tag.
-            </video>
+            <img
+              src="https://res.cloudinary.com/dp20bvzhn/image/upload/v1725876078/willie-design/williev2_1_zyyz6q.webp"
+              alt="A 3D generated image of Willie's name"
+            />
           </div>
 
           <div class="modal-footer">
@@ -704,8 +695,8 @@
                       rel="noopener noreferrer"
                       target="_blank"
                       class="nav-item_link uc-fs13-fw500"
-                      >instagram</a
-                    >
+                      >instagram,
+                    </a>
                   </li>
                   <li class="nav-list_item">
                     <a
@@ -713,7 +704,8 @@
                       rel="noopener noreferrer"
                       target="_blank"
                       class="nav-item_link uc-fs13-fw500"
-                      >x</a
+                    >
+                      twitter(x)</a
                     >
                   </li>
                 </ul>
