feat: Install GSAP splittext plugin and change the format of the modal heading title

--- a/public/index.html
+++ b/public/index.html
@@ -463,16 +463,13 @@
         <div class="modal-content uc-section-container">
           <div class="modal-header">
             <h2
-              class="modal-heading uc-fs13-fw500"
+              class="modal-heading uc-ffroslindale-fs48-fw400"
               id="modal-title"
-              data-modal-reveal
+              data-modal-title
             >
-              Williams Alamu
-              <span class="modal-heading-innertext uc-ffroslindale-fs48-fw400"
-                >is a creative designer from Lagos with keen interest in design.
-                Driven by the art of bringing ideas to life through crafted
-                visuals and motion.</span
-              >
+              Williams Alamu is a creative designer from Lagos with keen
+              interest in design. Driven by the art of bringing ideas to life
+              through crafted visuals and motion.
             </h2>
 
             <div class="enquires-wrapper">
@@ -757,6 +754,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+    <script src="https://res.cloudinary.com/dp20bvzhn/raw/upload/v1722087885/third-settlements/SplitText.min_yrgwof.js"></script>
 
     <script src="./script.js"></script>
   </body>
