chore: Fix layout issues

--- a/public/index.html
+++ b/public/index.html
@@ -423,6 +423,13 @@
                 <div class="description-title">
                   <h3 class="project-title uc-fs16-fw500">Chosen By God</h3>
                   <p class="project-attribution uc-fs16-fw500">w/Willie</p>
+                  <a
+                    href="#"
+                    class="project-link uc-fs16-fw500"
+                    disabled
+                    data-load-reveal
+                    >Visit website</a
+                  >
                 </div>
               </div>
             </div>
